--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="style.css" />
    <h1>Please download</h1>
       <a style="color:cyan;" href="red.txt" download>download and read</a>
-      <p>hope you enjoy this message it will be updated through out the weeks</p>
+      <p>hope you enjoy this message it will be updated through out the week I made this because I was bord lol</p>
     </header>
   </body>
 </html>
