--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <title>wril</title>
       <link rel="stylesheet" href="style.css" />
    <h1>Please download</h1>
-      <a style="color:cyan;" href="red.txt" download>download and read</a>
-      <p>hope you enjoy this message it will be updated through out the week I made this because I was bord lol</p>
+      <a style="color:cyan; text-align:center;" href="red.txt" download>download and read</a>
+      <p style="text-align:center;">hope you enjoy this message it will be updated through out the week I made this because I was bord lol</p>
     </header>
   </body>
 </html>
