--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="style.css" />
    <h1>Please download</h1>
       <a style="color:cyan; text-align:center;" href="red.txt" download>download and read</a>
-      <p style="text-align:center;">hope you enjoy this message it will be updated through out the week I made this because I was bord lol</p>
+      <p style="text-align:center; font-size:30px;">hope you enjoy this message it will be updated through out the week I made this because I was bord lol</p>
     </header>
   </body>
 </html>
